# rotz

./: .gitignore  .travis.yml  GNUmakefile  Makefile.am  README.md  configure.ac  index.md
_layouts/: default.html
build-aux/: git-version-gen  yuck.c  yuck.sh.m4  yuck.yuck
info/: Makefile.am  author.h2m  rotz-add.name  rotz-add.xmpl  rotz-alias.name  rotz-cloud.name  rotz-combine.name  rotz-del.name  rotz-del.xmpl  rotz-fsck.name  rotz-grep.name  rotz-rename.name  rotz-search.name  rotz-show.name  rotz-show.xmpl
src/: Makefile.am  nifty.h  raux.c  raux.h  rotz-add-clo.ggo  rotz-add.c  rotz-add.ggo  rotz-add.yuck  rotz-alias-clo.ggo  rotz-alias.c  rotz-alias.yuck  rotz-cloud-clo.ggo  rotz-cloud.c  rotz-cloud.ggo  rotz-cloud.yuck  rotz-cmd-api.h  rotz-cmd.c  rotz-combine-clo.ggo  rotz-combine.c  rotz-combine.yuck  rotz-del-clo.ggo  rotz-del.c  rotz-del.ggo  rotz-del.yuck  rotz-dump.c  rotz-export-clo.ggo  rotz-export.c  rotz-export.yuck  rotz-fsck-clo.ggo  rotz-fsck.c  rotz-fsck.yuck  rotz-grep.c  rotz-grep.ggo  rotz-grep.yuck  rotz-lmdb.c  rotz-rename.c  rotz-rename.ggo  rotz-rename.yuck  rotz-search-clo.ggo  rotz-search.c  (+13 more)
test/: Makefile.am  add_01.tst  add_02.tst  add_03.tst  clitoris.c  del_01.tst  del_02.tst  del_03.tst  del_04.tst  rtz-test-clo.ggo  rtz-test.c  rtz-test.sh  show_01.tst  show_02.tst  show_03.tst  show_04.tst  show_05.tst  show_06.tst  show_07.tst  show_08.tst
